fixed navbar and added skeleton

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,7 +34,10 @@ a {
 /* .ce-header {
   
 } */
-
+#nprogress {
+  position: relative;
+  z-index: 9999999;
+}
 #nprogress .bar {
   background: #66de93 !important;
 }
